# crack-ng

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md
src/: cascade.rs  engine.rs  export.rs  lib.rs  main.rs  mask.rs  parser.rs  potfile.rs  report.rs  session.rs  state.rs  tui.rs  wordlist.rs
tests/: run_test.sh  test_bcrypt.txt  test_hash.sh  test_mixed.txt  test_multi_hash.sh  test_pbkdf2.txt
