[package]
name = "crack-ng"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.36", features = ["full", "sync", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
tempfile = "3.10"
chrono = "0.4"
home = "0.5"
libc = "0.2"
